--- a/src/renderer/placeholder.html
+++ b/src/renderer/placeholder.html
@@ -79,7 +79,7 @@
     <div class="placeholder-container">
       <img src="./public/gura-pix.png" class="placeholder-image" alt="加载指示" />
       <div class="placeholder-text">
-        <p>長時間応答がない場合は、サービスが正常に起動しているかご確認ください</p>
+        <p>If there is no response for an extended period, please check whether the service has started correctly</p>
       </div>
     </div>
   </body>
